--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:prod": "tsc",
     "start": "concurrently \"npm:server\" \"npm:build\"",
     "test": "jest --watchAll --coverage",
-    "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests"
+    "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "Sofia Hudson",
@@ -28,7 +29,7 @@
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "concurrently": "^8.1.0",
+    "concurrently": "^8.2.0",
     "debug": "^4.3.4",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
@@ -36,7 +37,8 @@
     "jest": "^29.5.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "husky": "^8.0.0"
   },
   "prettier": {
     "singleQuote": true
