Add user.mongo.repo test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,9 @@ sonar.organization=isdi-coders-2023
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.test.inclusions=./src//.test.
+
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+sonar.coverage.exclusions=src/main.tsx, /src//.test., /commitlint.config.js
