--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.test.inclusions=./src//.test.
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-sonar.coverage.exclusions=src/main.tsx, /src//.test., /commitlint.config.js
+sonar.coverage.exclusions=src/main.tsx, /src/**/*.test.*, /commitlint.config.js
