--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.test.inclusions=./src//.test.
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-sonar.coverage.exclusions=/src/index.ts, /src/**/*.test.*, /commitlint.config.js, /src/app.ts, /src/config.ts, /src/db/db.connect.ts, /src/repository/user.mongo.model.ts, /src/routers/user.router.ts, /src/routers/book.router.ts, /src/repository/book.mongo.model.ts, /src/controllers/controller.ts, /src/repository/book.mongo.model.ts.
+sonar.coverage.exclusions=/src/index.ts, /src/**/*.test.*, /commitlint.config.js, /src/app.ts, /src/config.ts, /src/db/db.connect.ts, /src/repository/user.mongo.model.ts, /src/routers/user.router.ts, /src/routers/book.router.ts, /src/repository/book.mongo.model.ts, /src/controllers/controller.ts, /src/repository/book.mongo.model.ts, /src/controllers/controller.ts
